[package]
name = "cuda-cudnn-sys"
version = "0.1.0"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71"

[build-dependencies]
bindgen = "0.54.0"
static_assertions = "1.1.0"
