[package]
name = "cuda-cudnn-sys"
version = "0.0.1"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Rust wrapper for cuDNN"
homepage = "https://github.com/charles-r-earp/cuda-cudnn-sys"
repository = "https://github.com/charles-r-earp/cuda-cudnn-sys"
keywords = ["cuda", "cudnn"]
categories = ["science"]
readme = "README.md"

[dependencies]
libc = "0.2.71"

[build-dependencies]
bindgen = "0.54.0"
static_assertions = "1.1.0"
